--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ramkumar S - Data Science Portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+
+<header>
+    <h1>🧠 Ramkumar S</h1>
+    <p>Data Science | Machine Learning | AI Enthusiast</p>
+</header>
+
+<nav>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+</nav>
+
+<section id="about" class="section">
+    <h2>About Me</h2>
+    <p>
+        I am an aspiring Data Scientist from Chennai with strong skills in Python,
+        SQL, ML algorithms, EDA, forecasting, and AI-driven applications. 
+        I enjoy turning raw data into insights and building smart solutions.
+    </p>
+</section>
+
+<section id="skills" class="section">
+    <h2>Skills</h2>
+    <div class="skill-grid">
+        <span>Python</span>
+        <span>SQL</span>
+        <span>Java</span>
+        <span>Machine Learning</span>
+        <span>EDA</span>
+        <span>Feature Engineering</span>
+        <span>Power BI</span>
+        <span>TensorFlow</span>
+        <span>Pandas</span>
+        <span>NumPy</span>
+        <span>MySQL</span>
+        <span>MongoDB</span>
+    </div>
+</section>
+
+<section id="projects" class="section">
+    <h2>Projects</h2>
+
+    <div class="project-card">
+        <h3>🔋 Renewable Energy Forecasting</h3>
+        <p>Forecasted solar, wind, and hydro trends using ARIMA.</p>
+    </div>
+
+    <div class="project-card">
+        <h3>🛒 E-Commerce Inventory Management System</h3>
+        <p>Python + SQL-based real-time stock and product management.</p>
+    </div>
+
+    <div class="project-card">
+        <h3>🔐 IoT Laser Security System</h3>
+        <p>Motion detection + gas leak alerts + camera monitoring.</p>
+    </div>
+
+    <div class="project-card">
+        <h3>🤖 AI-Integrated E-Learning Platform</h3>
+        <p>AI chatbot-powered learning assistant using Streamlit + OpenAI API.</p>
+    </div>
+
+</section>
+
+<section id="contact" class="section">
+    <h2>Contact</h2>
+    <p><strong>Email:</strong> ramkumar.devp@gmail.com</p>
+    <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ramkumar-s-027949357" target="_blank">Click Here</a></p>
+    <p><strong>GitHub:</strong> <a href="https://github.com/Ramkumar2521" target="_blank">Click Here</a></p>
+</section>
+
+<footer>
+    <p>© 2025 Ramkumar S | Data Science Portfolio</p>
+</footer>
+
+<script src="script.js"></script>
+</body>
+</html>
 
