Remove emoji from header title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-    <h1>🧠 Ramkumar S</h1>
+    <h1> Ramkumar S</h1>
     <p>Data Science | Machine Learning | AI Enthusiast</p>
 </header>
 
