Refactor index.html for better readability and style
Updated content and structure for improved clarity and presentation.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
 
-<header>
+<header class="fade-in">
     <h1> Ramkumar S</h1>
-    <p>Data Science | Machine Learning | AI Enthusiast</p>
+    <p>Data Science • Machine Learning • AI Enthusiast</p>
 </header>
 
 <nav>
@@ -21,70 +21,62 @@
     <a href="#contact">Contact</a>
 </nav>
 
-<section id="about" class="section">
+<section id="about" class="section reveal">
     <h2>About Me</h2>
     <p>
-        I am an aspiring Data Scientist from Chennai with strong skills in Python,
-        SQL, ML algorithms, EDA, forecasting, and AI-driven applications. 
-        I enjoy turning raw data into insights and building smart solutions.
+        I am an aspiring Data Scientist from Chennai skilled in Python,
+        SQL, Machine Learning, EDA, Forecasting & Data Visualization.
+        I enjoy building real-world AI and data-driven solutions.
     </p>
 </section>
 
-<section id="skills" class="section">
+<section id="skills" class="section reveal">
     <h2>Skills</h2>
     <div class="skill-grid">
-        <span>Python</span>
-        <span>SQL</span>
-        <span>Java</span>
-        <span>Machine Learning</span>
-        <span>EDA</span>
-        <span>Feature Engineering</span>
-        <span>Power BI</span>
-        <span>TensorFlow</span>
-        <span>Pandas</span>
-        <span>NumPy</span>
-        <span>MySQL</span>
-        <span>MongoDB</span>
+        <span>Python</span><span>SQL</span><span>Java</span>
+        <span>Machine Learning</span><span>EDA</span>
+        <span>Feature Engineering</span><span>Power BI</span>
+        <span>TensorFlow</span><span>Pandas</span>
+        <span>NumPy</span><span>MySQL</span><span>MongoDB</span>
     </div>
 </section>
 
-<section id="projects" class="section">
+<section id="projects" class="section reveal">
     <h2>Projects</h2>
 
-    <div class="project-card">
+    <div class="project-card hover">
         <h3>🔋 Renewable Energy Forecasting</h3>
-        <p>Forecasted solar, wind, and hydro trends using ARIMA.</p>
+        <p>ARIMA-based forecasting on solar, wind & hydro data.</p>
     </div>
 
-    <div class="project-card">
-        <h3>🛒 E-Commerce Inventory Management System</h3>
-        <p>Python + SQL-based real-time stock and product management.</p>
+    <div class="project-card hover">
+        <h3>🛒 E-Commerce Inventory Management</h3>
+        <p>Python + SQL system for stock, catalog & order tracking.</p>
     </div>
 
-    <div class="project-card">
+    <div class="project-card hover">
         <h3>🔐 IoT Laser Security System</h3>
-        <p>Motion detection + gas leak alerts + camera monitoring.</p>
+        <p>Real-time alerts + gas detection + camera integration.</p>
     </div>
 
-    <div class="project-card">
+    <div class="project-card hover">
         <h3>🤖 AI-Integrated E-Learning Platform</h3>
-        <p>AI chatbot-powered learning assistant using Streamlit + OpenAI API.</p>
+        <p>AI chatbot for learning support using Streamlit + AI API.</p>
     </div>
 
 </section>
 
-<section id="contact" class="section">
+<section id="contact" class="section reveal">
     <h2>Contact</h2>
     <p><strong>Email:</strong> ramkumar.devp@gmail.com</p>
     <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ramkumar-s-027949357" target="_blank">Click Here</a></p>
     <p><strong>GitHub:</strong> <a href="https://github.com/Ramkumar2521" target="_blank">Click Here</a></p>
 </section>
 
-<footer>
+<footer class="fade-in">
     <p>© 2025 Ramkumar S | Data Science Portfolio</p>
 </footer>
 
 <script src="script.js"></script>
 </body>
 </html>
-
