Revise 'About Me' section for improved description
Updated the 'About Me' section to enhance clarity and detail.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
 <section id="about" class="section reveal">
     <h2>About Me</h2>
     <p>
-        I am an aspiring Data Scientist from Chennai skilled in Python,
-        SQL, Machine Learning, EDA, Forecasting & Data Visualization.
-        I enjoy building real-world AI and data-driven solutions.
+        Aspiring Data Scientist with a passion for decoding data, discovering patterns, and building smart AI solutions. Skilled in Python, SQL, Machine Learning, and visualization, with a strong focus on creating impactful, real-world projects.
     </p>
 </section>
 
