Add resume download link
Add a download link for the resume in index.html

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         <span>NumPy</span><span>MySQL</span><span>MongoDB</span>
     </div>
 </section>
+<p>
+    <a class="resume-btn" href="assets/resume.pdf" target="_blank">
+        📄 Download My Resume
+    </a>
+</p>
 
 <section id="projects" class="section reveal">
     <h2>Projects</h2>
