Add profile image to About Me section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 
 <section id="about" class="section reveal">
     <h2>About Me</h2>
+    <div class="profile-container">
+    <img src="assets/profile.jpg" alt="Profile Photo" class="profile-pic">
+</div>
+
     <p>
         Aspiring Data Scientist with a passion for decoding data, discovering patterns, and building smart AI solutions. Skilled in Python, SQL, Machine Learning, and visualization, with a strong focus on creating impactful, real-world projects.
     </p>
