Revise portfolio layout and content
Updated the portfolio layout and content to reflect a more professional presentation, including changes to the header, skills, projects, and contact sections.

--- a/index.html
+++ b/index.html
@@ -1,89 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ramkumar S - Data Science Portfolio</title>
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ramkumar Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 
-<header class="fade-in">
-    <h1> Ramkumar S</h1>
-    <p>Data Science • Machine Learning • AI Enthusiast</p>
-</header>
+    <!-- Header Section -->
+    <header class="hero">
+        <div class="hero-content">
+            <h1>Hi, I'm <span>Ramkumar</span></h1>
+            <p class="subtitle">Aspiring Data Scientist from Chennai</p>
 
-<nav>
-    <a href="#about">About</a>
-    <a href="#skills">Skills</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-</nav>
+            <p class="intro">
+                Passionate about Python, SQL, Machine Learning, EDA, Forecasting, and Data Visualization.  
+                I enjoy building real-world AI solutions and uncovering insights from data.
+            </p>
 
-<section id="about" class="section reveal">
-    <h2>About Me</h2>
-    <div class="profile-container">
-    <img src="assets/profile.jpg" alt="Profile Photo" class="profile-pic">
-</div>
+            <a class="resume-btn" href="assets/resume.pdf" target="_blank">📄 Download My Resume</a>
+        </div>
 
-    <p>
-        Aspiring Data Scientist with a passion for decoding data, discovering patterns, and building smart AI solutions. Skilled in Python, SQL, Machine Learning, and visualization, with a strong focus on creating impactful, real-world projects.
-    </p>
-</section>
+        <!-- Profile Photo -->
+        <div class="profile-photo-container">
+            <img src="assets/profile.jpg" alt="Profile Photo" class="profile-pic">
+        </div>
+    </header>
 
-<section id="skills" class="section reveal">
-    <h2>Skills</h2>
-    <div class="skill-grid">
-        <span>Python</span><span>SQL</span><span>Java</span>
-        <span>Machine Learning</span><span>EDA</span>
-        <span>Feature Engineering</span><span>Power BI</span>
-        <span>TensorFlow</span><span>Pandas</span>
-        <span>NumPy</span><span>MySQL</span><span>MongoDB</span>
-    </div>
-</section>
-<p>
-    <a class="resume-btn" href="assets/resume.pdf" target="_blank">
-        📄 Download My Resume
-    </a>
-</p>
+    <!-- Skills Section -->
+    <section class="section" id="skills">
+        <h2 class="section-title">Skills</h2>
+        <div class="skills-grid">
+            <span>Python</span>
+            <span>SQL</span>
+            <span>Machine Learning</span>
+            <span>EDA</span>
+            <span>Data Visualization</span>
+            <span>Forecasting</span>
+        </div>
+    </section>
 
-<section id="projects" class="section reveal">
-    <h2>Projects</h2>
+    <!-- Projects Section -->
+    <section class="section" id="projects">
+        <h2 class="section-title">Projects</h2>
 
-    <div class="project-card hover">
-        <h3>🔋 Renewable Energy Forecasting</h3>
-        <p>ARIMA-based forecasting on solar, wind & hydro data.</p>
-    </div>
+        <div class="project-card">
+            <h3>Sales Forecasting Model</h3>
+            <p>Built a machine learning model to forecast retail sales using Python, Pandas, and Prophet.</p>
+        </div>
 
-    <div class="project-card hover">
-        <h3>🛒 E-Commerce Inventory Management</h3>
-        <p>Python + SQL system for stock, catalog & order tracking.</p>
-    </div>
+        <div class="project-card">
+            <h3>E-Learning Platform with AI Chatbot</h3>
+            <p>Developed an interactive e-learning system integrated with an intelligent chatbot for personalized learning.</p>
+        </div>
 
-    <div class="project-card hover">
-        <h3>🔐 IoT Laser Security System</h3>
-        <p>Real-time alerts + gas detection + camera integration.</p>
-    </div>
+        <div class="project-card">
+            <h3>Customer Churn Prediction</h3>
+            <p>Analyzed customer behavior and predicted churn using ML classification algorithms.</p>
+        </div>
+    </section>
 
-    <div class="project-card hover">
-        <h3>🤖 AI-Integrated E-Learning Platform</h3>
-        <p>AI chatbot for learning support using Streamlit + AI API.</p>
-    </div>
+    <!-- Contact Section -->
+    <section class="section" id="contact">
+        <h2 class="section-title">Contact</h2>
+        <p>Email: <a href="mailto:ramkumar2521@gmail.com">ramkumar2521@gmail.com</a></p>
+        <p>LinkedIn: <a href="#">Your LinkedIn Link</a></p>
+        <p>GitHub: <a href="https://github.com/ramkumar2521">github.com/ramkumar2521</a></p>
+    </section>
 
-</section>
-
-<section id="contact" class="section reveal">
-    <h2>Contact</h2>
-    <p><strong>Email:</strong> ramkumar.devp@gmail.com</p>
-    <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ramkumar-s-027949357" target="_blank">Click Here</a></p>
-    <p><strong>GitHub:</strong> <a href="https://github.com/Ramkumar2521" target="_blank">Click Here</a></p>
-</section>
-
-<footer class="fade-in">
-    <p>© 2025 Ramkumar S | Data Science Portfolio</p>
-</footer>
-
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
