--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <!-- Header Section -->
     <header class="hero">
-        <div class="hero-content">
+        <div class="hero-content reveal">
             <h1>Hi, I'm <span>Ramkumar</span></h1>
             <p class="subtitle">Aspiring Data Scientist from Chennai</p>
 
             <p class="intro">
-                Passionate about Python, SQL, Machine Learning, EDA, Forecasting, and Data Visualization.  
+                Passionate about Python, SQL, Machine Learning, EDA, Forecasting, and Data Visualization.
                 I enjoy building real-world AI solutions and uncovering insights from data.
             </p>
 
@@ -23,15 +23,16 @@
         </div>
 
         <!-- Profile Photo -->
-        <div class="profile-photo-container">
+        <div class="profile-photo-container reveal">
             <img src="assets/profile.jpg" alt="Profile Photo" class="profile-pic">
         </div>
     </header>
 
     <!-- Skills Section -->
-    <section class="section" id="skills">
+    <section class="section reveal" id="skills">
         <h2 class="section-title">Skills</h2>
-        <div class="skills-grid">
+
+        <div class="skills-grid reveal">
             <span>Python</span>
             <span>SQL</span>
             <span>Machine Learning</span>
@@ -42,27 +43,27 @@
     </section>
 
     <!-- Projects Section -->
-    <section class="section" id="projects">
+    <section class="section reveal" id="projects">
         <h2 class="section-title">Projects</h2>
 
-        <div class="project-card">
+        <div class="project-card reveal">
             <h3>Sales Forecasting Model</h3>
             <p>Built a machine learning model to forecast retail sales using Python, Pandas, and Prophet.</p>
         </div>
 
-        <div class="project-card">
+        <div class="project-card reveal">
             <h3>E-Learning Platform with AI Chatbot</h3>
             <p>Developed an interactive e-learning system integrated with an intelligent chatbot for personalized learning.</p>
         </div>
 
-        <div class="project-card">
+        <div class="project-card reveal">
             <h3>Customer Churn Prediction</h3>
             <p>Analyzed customer behavior and predicted churn using ML classification algorithms.</p>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section class="section" id="contact">
+    <section class="section reveal" id="contact">
         <h2 class="section-title">Contact</h2>
         <p>Email: <a href="mailto:ramkumar2521@gmail.com">ramkumar2521@gmail.com</a></p>
         <p>LinkedIn: <a href="#">Your LinkedIn Link</a></p>
