Refactor HTML structure and improve content clarity

--- a/index.html
+++ b/index.html
@@ -8,31 +8,26 @@
 </head>
 <body>
 
-    <!-- Header Section -->
-    <header class="hero">
-        <div class="hero-content reveal">
-            <h1>Hi, I'm <span>Ramkumar</span></h1>
-            <p class="subtitle">Aspiring Data Scientist from Chennai</p>
+    <!-- HERO SECTION -->
+    <header class="hero reveal">
+        <h1>Hi, I'm <span>Ramkumar</span></h1>
+        <p class="subtitle">Aspiring Data Scientist from Chennai</p>
 
-            <p class="intro">
-                Passionate about Python, SQL, Machine Learning, EDA, Forecasting, and Data Visualization.
-                I enjoy building real-world AI solutions and uncovering insights from data.
-            </p>
+        <p class="intro">
+            Passionate about Python, SQL, Machine Learning, EDA, Forecasting & Data Visualization.
+            I enjoy building real-world AI solutions and uncovering insights from data.
+        </p>
 
-            <a class="resume-btn" href="assets/resume.pdf" target="_blank">📄 Download My Resume</a>
-        </div>
+        <a class="resume-btn" href="assets/resume.pdf" target="_blank">📄 Download My Resume</a>
 
-        <!-- Profile Photo -->
-        <div class="profile-photo-container reveal">
-            <img src="assets/profile.jpg" alt="Profile Photo" class="profile-pic">
-        </div>
+        <!-- Profile Image -->
+        <img src="assets/profile.jpg" class="profile-pic" alt="Profile Photo">
     </header>
 
-    <!-- Skills Section -->
+    <!-- SKILLS -->
     <section class="section reveal" id="skills">
         <h2 class="section-title">Skills</h2>
-
-        <div class="skills-grid reveal">
+        <div class="skills-grid">
             <span>Python</span>
             <span>SQL</span>
             <span>Machine Learning</span>
@@ -42,7 +37,7 @@
         </div>
     </section>
 
-    <!-- Projects Section -->
+    <!-- PROJECTS -->
     <section class="section reveal" id="projects">
         <h2 class="section-title">Projects</h2>
 
@@ -53,16 +48,16 @@
 
         <div class="project-card reveal">
             <h3>E-Learning Platform with AI Chatbot</h3>
-            <p>Developed an interactive e-learning system integrated with an intelligent chatbot for personalized learning.</p>
+            <p>Developed an interactive e-learning platform integrated with an intelligent chatbot.</p>
         </div>
 
         <div class="project-card reveal">
             <h3>Customer Churn Prediction</h3>
-            <p>Analyzed customer behavior and predicted churn using ML classification algorithms.</p>
+            <p>Predicted churn using classification models & behavior patterns.</p>
         </div>
     </section>
 
-    <!-- Contact Section -->
+    <!-- CONTACT -->
     <section class="section reveal" id="contact">
         <h2 class="section-title">Contact</h2>
         <p>Email: <a href="mailto:ramkumar2521@gmail.com">ramkumar2521@gmail.com</a></p>
