Revise subtitle and intro for improved messaging
Updated subtitle and intro paragraph to enhance clarity and detail.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <!-- HERO SECTION -->
     <header class="hero reveal">
         <h1>Hi, I'm <span>Ramkumar</span></h1>
-        <p class="subtitle">Aspiring Data Scientist from Chennai</p>
+        <p class="subtitle">Passionate Data Science Aspirant</p>
 
         <p class="intro">
-            Passionate about Python, SQL, Machine Learning, EDA, Forecasting & Data Visualization.
-            I enjoy building real-world AI solutions and uncovering insights from data.
+            I am passionate about Python, SQL, Machine Learning, EDA, Forecasting, and Data Visualization. I love transforming raw data into meaningful insights and developing AI-driven solutions that solve real-world problems. With a strong foundation in analytics and a growing expertise in data science workflows, I enjoy exploring patterns, building predictive models, and turning data into actionable outcomes.
         </p>
 
         <a class="resume-btn" href="assets/resume.pdf" target="_blank">📄 Download My Resume</a>
