--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!-- CONTACT -->
     <section id="contact" class="contact-section">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:ramkumar.devp@gmail.com">ramkumar2521@gmail.com</a></p>
+        <p>Email: <a href="mailto:ramkumar.devp@gmail.com">ramkumar.devp@gmail.com</a></p>
         <p>GitHub: <a href="https://github.com/ramkumar2521">github.com/ramkumar2521</a></p>
         <p>LinkedIn: <a href="www.linkedin.com/in/ramkumar-s-027949357">linkedin/ramkumar</a></p>
     </section>
