Revise about section, projects, and contact details
Updated personal and project descriptions in the about and projects sections. Modified contact information with new email and GitHub link.

--- a/index.html
+++ b/index.html
@@ -39,22 +39,77 @@
         <h2>About</h2>
         <p>
             I am passionate about Python, SQL, Machine Learning, EDA, Forecasting, and Data Visualization. 
-            I love transforming raw data into meaningful insights and building AI-driven solutions that solve 
-            real-world problems. With a strong foundation in analytics and hands-on project experience, I 
-            enjoy exploring patterns, developing predictive models, and delivering data-backed outcomes.
+            I enjoy transforming raw data into actionable insights and building scalable data-driven solutions.
+            With hands-on experience in predictive modelling, automation, and analytics, I strive to solve
+            real-world problems using statistical and machine learning approaches.
         </p>
     </section>
 
     <!-- SKILLS -->
     <section id="skills" class="skills-section">
         <h2>Skills</h2>
-        <div class="skills-row">
-            <div class="skill-box">Python</div>
-            <div class="skill-box">SQL</div>
-            <div class="skill-box">Machine Learning</div>
-            <div class="skill-box">EDA</div>
-            <div class="skill-box">Data Visualization</div>
-            <div class="skill-box">Forecasting</div>
+
+        <div class="skills-group">
+            <h3>Programming</h3>
+            <div class="skills-row">
+                <div class="skill-box">Python</div>
+                <div class="skill-box">Java</div>
+                <div class="skill-box">SQL</div>
+            </div>
+        </div>
+
+        <div class="skills-group">
+            <h3>Data Science Concepts</h3>
+            <div class="skills-row">
+                <div class="skill-box">Machine Learning</div>
+                <div class="skill-box">EDA</div>
+                <div class="skill-box">DSA</div>
+                <div class="skill-box">OOP</div>
+                <div class="skill-box">OS</div>
+                <div class="skill-box">Agile</div>
+            </div>
+        </div>
+
+        <div class="skills-group">
+            <h3>Databases</h3>
+            <div class="skills-row">
+                <div class="skill-box">MySQL</div>
+                <div class="skill-box">Oracle</div>
+                <div class="skill-box">MongoDB</div>
+            </div>
+        </div>
+
+        <div class="skills-group">
+            <h3>Tools & Platforms</h3>
+            <div class="skills-row">
+                <div class="skill-box">GitHub</div>
+                <div class="skill-box">Docker</div>
+                <div class="skill-box">Power BI</div>
+                <div class="skill-box">Pandas</div>
+                <div class="skill-box">NumPy</div>
+                <div class="skill-box">Matplotlib</div>
+                <div class="skill-box">TensorFlow</div>
+                <div class="skill-box">Tableau</div>
+            </div>
+        </div>
+
+        <div class="skills-group">
+            <h3>Web Technologies</h3>
+            <div class="skills-row">
+                <div class="skill-box">HTML</div>
+                <div class="skill-box">CSS</div>
+                <div class="skill-box">JavaScript (Basics)</div>
+            </div>
+        </div>
+
+        <div class="skills-group">
+            <h3>Soft Skills</h3>
+            <div class="skills-row">
+                <div class="skill-box">Analytical Thinking</div>
+                <div class="skill-box">Problem Solving</div>
+                <div class="skill-box">Team Collaboration</div>
+                <div class="skill-box">Communication</div>
+            </div>
         </div>
     </section>
 
@@ -63,27 +118,48 @@
         <h2>Projects</h2>
 
         <div class="project-card">
+            <h3>Renewable Energy Trend Analysis & Forecasting</h3>
+            <p>
+                Analyzed 10 years of solar, wind, and hydro energy production data using Python.  
+                Built ARIMA forecasting models to predict future renewable energy growth and created 
+                visual dashboards to support sustainability planning and decision-making.
+            </p>
+        </div>
+
+        <div class="project-card">
+            <h3>E-Commerce Inventory Management System</h3>
+            <p>
+                Developed a complete inventory management system using Python and MySQL. Automated 
+                stock updates after transactions and integrated product search, filter options, and 
+                order-processing features to improve operational efficiency.
+            </p>
+        </div>
+
+        <div class="project-card">
+            <h3>IoT-Based Laser Security System</h3>
+            <p>
+                Built a real-time security system with laser-based intrusion detection. Integrated 
+                live surveillance, motion-triggered alerts, and gas leak detection to enhance home 
+                safety and hazard prevention.
+            </p>
+        </div>
+
+        <div class="project-card">
             <h3>Sales Forecasting Model</h3>
-            <p>Built a forecasting model using Pandas, Prophet & feature engineering.</p>
-        </div>
-
-        <div class="project-card">
-            <h3>E-Learning Platform with AI Chatbot</h3>
-            <p>Developed an interactive learning platform with integrated AI chatbot.</p>
-        </div>
-
-        <div class="project-card">
-            <h3>Customer Churn Prediction</h3>
-            <p>Predicted churn using classification models & behavioral patterns.</p>
+            <p>
+                Designed a forecasting model using Pandas, Prophet, and feature engineering to 
+                predict future product demand. Improved forecasting accuracy through time-series 
+                decomposition and data preprocessing.
+            </p>
         </div>
     </section>
 
     <!-- CONTACT -->
     <section id="contact" class="contact-section">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:ramkumar.devp@gmail.com">ramkumar.devp@gmail.com</a></p>
-        <p>GitHub: <a href="https://github.com/ramkumar2521">github.com/ramkumar2521</a></p>
-        <p>LinkedIn: <a href="www.linkedin.com/in/ramkumar-s-027949357">linkedin/ramkumar</a></p>
+        <p>Email: <a href="mailto:ramkumar.devp@gmail.com">ramkumar@gmail.com</a></p>
+        <p>GitHub: <a href="https://github.com/Ramkumar2521">github.com/Ramkumar2521</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/ramkumar-s-027949357/">linkedin.com/in/ramkumar</a></p>
     </section>
 
 </body>
