Enhance sections with reveal class and update content
Added reveal class to various sections for animation effects and updated project descriptions for clarity.

--- a/index.html
+++ b/index.html
@@ -11,16 +11,24 @@
     <!-- NAVBAR -->
     <nav class="navbar">
         <h2 class="logo">Ramkumar</h2>
+
         <ul class="nav-links">
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
+
+        <!-- MOBILE MENU BUTTON -->
+        <div class="menu-btn">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </nav>
 
     <!-- HERO -->
-    <section class="hero-section">
+    <section class="hero-section reveal">
         <div class="hero-left">
             <p class="hello-text">Hello, I'm</p>
             <h1 class="title">Ramkumar</h1>
@@ -35,10 +43,10 @@
     </section>
 
     <!-- ABOUT -->
-    <section id="about" class="about-section">
+    <section id="about" class="about-section reveal">
         <h2>About</h2>
         <p>
-            I am passionate about Python, SQL, Machine Learning, EDA, Forecasting, and Data Visualization. 
+            I am passionate about Python, SQL, Machine Learning, EDA, Forecasting, and Data Visualization.
             I enjoy transforming raw data into actionable insights and building scalable data-driven solutions.
             With hands-on experience in predictive modelling, automation, and analytics, I strive to solve
             real-world problems using statistical and machine learning approaches.
@@ -46,7 +54,7 @@
     </section>
 
     <!-- SKILLS -->
-    <section id="skills" class="skills-section">
+    <section id="skills" class="skills-section reveal">
         <h2>Skills</h2>
 
         <div class="skills-group">
@@ -114,53 +122,52 @@
     </section>
 
     <!-- PROJECTS -->
-    <section id="projects" class="projects-section">
+    <section id="projects" class="projects-section reveal">
         <h2>Projects</h2>
 
         <div class="project-card">
             <h3>Renewable Energy Trend Analysis & Forecasting</h3>
             <p>
-                Analyzed 10 years of solar, wind, and hydro energy production data using Python.  
-                Built ARIMA forecasting models to predict future renewable energy growth and created 
-                visual dashboards to support sustainability planning and decision-making.
+                Analyzed 10 years of solar, wind, and hydro energy production data using Python.
+                Built ARIMA forecasting models and dashboards to support sustainability planning.
             </p>
         </div>
 
         <div class="project-card">
             <h3>E-Commerce Inventory Management System</h3>
             <p>
-                Developed a complete inventory management system using Python and MySQL. Automated 
-                stock updates after transactions and integrated product search, filter options, and 
-                order-processing features to improve operational efficiency.
+                Developed a complete inventory system using Python + MySQL.
+                Automated stock updates and added advanced search, filter, and order management.
             </p>
         </div>
 
         <div class="project-card">
             <h3>IoT-Based Laser Security System</h3>
             <p>
-                Built a real-time security system with laser-based intrusion detection. Integrated 
-                live surveillance, motion-triggered alerts, and gas leak detection to enhance home 
-                safety and hazard prevention.
+                Built a live intrusion detection system with camera surveillance, motion alerts,
+                and LPG gas leak monitoring for real-time home safety.
             </p>
         </div>
 
         <div class="project-card">
             <h3>Sales Forecasting Model</h3>
             <p>
-                Designed a forecasting model using Pandas, Prophet, and feature engineering to 
-                predict future product demand. Improved forecasting accuracy through time-series 
-                decomposition and data preprocessing.
+                Implemented Prophet and feature engineering to predict future product demand
+                and improve planning accuracy.
             </p>
         </div>
     </section>
 
     <!-- CONTACT -->
-    <section id="contact" class="contact-section">
+    <section id="contact" class="contact-section reveal">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:ramkumar.devp@gmail.com">ramkumar@gmail.com</a></p>
+        <p>Email: <a href="mailto:ramkumar.devp@gmail.com">ramkumar.devp@gmail.com</a></p>
         <p>GitHub: <a href="https://github.com/Ramkumar2521">github.com/Ramkumar2521</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/ramkumar-s-027949357/">linkedin.com/in/ramkumar</a></p>
     </section>
+
+    <!-- SCRIPT -->
+    <script src="script.js"></script>
 
 </body>
 </html>
