Revise project descriptions in index.html
Updated project descriptions for clarity and detail.

--- a/index.html
+++ b/index.html
@@ -136,24 +136,20 @@
         <div class="project-card">
             <h3>E-Commerce Inventory Management System</h3>
             <p>
-                Developed a complete inventory system using Python + MySQL.
-                Automated stock updates and added advanced search, filter, and order management.
-            </p>
+               Developed a complete inventory system using Python and MySQL, automating stock updates and enabling advanced search and filtering. Implemented streamlined order management features to improve efficiency and accuracy.
         </div>
 
         <div class="project-card">
             <h3>IoT-Based Laser Security System</h3>
             <p>
-                Built a live intrusion detection system with camera surveillance, motion alerts,
-                and LPG gas leak monitoring for real-time home safety.
+Built a real-time intrusion detection system featuring camera surveillance, motion-triggered alerts, and LPG gas leak monitoring. The solution enhances home safety by providing instant threat detection and continuous environmental monitoring.
             </p>
         </div>
 
         <div class="project-card">
-            <h3>Sales Forecasting Model</h3>
+            <h3>Online E-Learning Platfrom With Integrated AI Chatbot</h3>
             <p>
-                Implemented Prophet and feature engineering to predict future product demand
-                and improve planning accuracy.
+                I build intelligent data-driven applications using Python, SQL, ML, and NLP to extract insights, automate processes, and deliver meaningful outcomes. I also develop full-stack features using PHP to create robust, scalable, and user-centric solutions.
             </p>
         </div>
     </section>
