--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
         <div class="project-card">
             <h3>Renewable Energy Trend Analysis & Forecasting</h3>
             <p>
-                Analyzed 10 years of solar, wind, and hydro energy production data using Python.
-                Built ARIMA forecasting models and dashboards to support sustainability planning.
+                Analyzed 10 years of solar, wind, and hydro energy production data using Python and built ARIMA forecasting models for trend prediction.
+Created interactive dashboards to support data-driven sustainability and energy planning.
+
             </p>
         </div>
 
